added pin code length

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -265,5 +265,6 @@
   "hello_user": "Кош келдиңиз",
   "forgot_pin_code": "ПИН кодунузду унутуп калдыңызбы?",
   "fingerprint_scan": "Аныктыгын текшерүү үчүн манжа изиңизди сканерлеңиз",
-  "fingerprint_auth": "Манжа изинин аныктыгы"
+  "fingerprint_auth": "Манжа изинин аныктыгы",
+  "pin_code_length": "ПИН-коддун узундугу 4 белгиден ашпашы керек"
 }
