--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -264,5 +264,6 @@
   "hello_user": "Приветствуем Вас",
   "forgot_pin_code": "Забыли Пин-Код?",
   "fingerprint_scan": "Отсканируйте свой отпечаток пальца для аутентификации",
-  "fingerprint_auth": "Аутентификация по отпечатку пальца"
+  "fingerprint_auth": "Аутентификация по отпечатку пальца",
+  "pin_code_length": "Длина ПИН-КОДа не должна превышать 4 символов"
 }
