refactoring with new comments

--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -213,7 +213,7 @@
   "hiv_infection_treatment": "Лечение ВИЧ-инфекции",
   "hiv_drugs": "Препараты для лечения ВИЧ",
   "treatment_adherence": "Приверженность к лечению",
-  "impact_ART": "Вляиние АРТ на здоровье",
+  "impact_ART": "Влияние АРТ на здоровье",
   "impact_persons_life": "Влияние АРТ на жизнь человека",
   "actions_when_you_have_hiv": "Что делать, если у Вас ВИЧ",
   "my_state": "Мое состояние",
