--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -266,5 +266,9 @@
   "forgot_pin_code": "ПИН кодунузду унутуп калдыңызбы?",
   "fingerprint_scan": "Аныктыгын текшерүү үчүн манжа изиңизди сканерлеңиз",
   "fingerprint_auth": "Манжа изинин аныктыгы",
-  "pin_code_length": "ПИН-коддун узундугу 4 белгиден ашпашы керек"
+  "pin_code_length": "ПИН-коддун узундугу 4 белгиден ашпашы керек",
+  "next": "Кийинки",
+  "pl_hiv_test": "Тест",
+  "check_answers" : "Сураныч, бардык мүмкүн болгон варианттарды белгилеңиз",
+  "check_answer" : "Сураныч, бир туура жоопту белгилеңиз"
 }
