--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -265,5 +265,9 @@
   "forgot_pin_code": "Забыли Пин-Код?",
   "fingerprint_scan": "Отсканируйте свой отпечаток пальца для аутентификации",
   "fingerprint_auth": "Аутентификация по отпечатку пальца",
-  "pin_code_length": "Длина ПИН-КОДа не должна превышать 4 символов"
+  "pin_code_length": "Длина ПИН-КОДа не должна превышать 4 символов",
+  "next": "Следующий",
+  "pl_hiv_test": "Тест",
+  "check_answers" : "Пожалуйста отметьте все возможные варианты",
+  "check_answer" : "Пожалуйста отметьте один правильный ответ"
 }
