result test new changes

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -270,5 +270,7 @@
   "next": "Кийинки",
   "pl_hiv_test": "Тест",
   "check_answers" : "Сураныч, бардык мүмкүн болгон варианттарды белгилеңиз",
-  "check_answer" : "Сураныч, бир туура жоопту белгилеңиз"
+  "check_answer" : "Сураныч, бир туура жоопту белгилеңиз",
+  "analyze_result": "Анализа натыйжалары",
+  "doctor_appointment": "Врачтын корсотмосу"
 }
