--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -269,5 +269,7 @@
   "next": "Следующий",
   "pl_hiv_test": "Тест",
   "check_answers" : "Пожалуйста отметьте все возможные варианты",
-  "check_answer" : "Пожалуйста отметьте один правильный ответ"
+  "check_answer" : "Пожалуйста отметьте один правильный ответ",
+  "analyze_result": "Результаты анализа",
+  "doctor_appointment": "Назначение врача"
 }
