chapter one localization - half

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -272,5 +272,39 @@
   "check_answers" : "Сураныч, бардык мүмкүн болгон варианттарды белгилеңиз",
   "check_answer" : "Сураныч, бир туура жоопту белгилеңиз",
   "analyze_result": "Анализа натыйжалары",
-  "doctor_appointment": "Врачтын корсотмосу"
+  "doctor_appointment": "Врачтын корсотмосу",
+  "drNadezhda_chapter_one": "Саламатсызбы!\nмен – дарыгер Надеждамын",
+  "drAzamat_chapter_one": "Саламатсызбы!\nмен – дарыгер Азаматмын",
+  "first_dialog_c1": "Бүгүн биз силер менен ВИЧ жана СПИД тууралуу сүйлөшөбүз. ВИЧ жана СПИД деген эмне, ВИЧ кантип жугат, ВИЧке тест тапшыруу эмне үчүн маанилүү жана ВИЧтин жыйынтыгы оң чыкканда эмне кылуу керектиги тууралуу сөз кылабыз.",
+  "last_dialog_c2": "Кыргызстанда чет элдиктер арасында ВИЧ илдетинин биринчи учуру 1987-жылы аныкталган, ал эми Кыргыз Республикасынын жарандарынын арасында биринчи учур 1996-жылы аныкталган. 2017-жылдын 1-январына карата Кыргызстанда ВИЧ илдети менен ооруган 7117 адам аныкталган. Болжолдуу маалыматтар боюнча өлкөдө 8307 адам ВИЧ менен жашайт, башкача айтканда, ВИЧке чалдыккандардын көбү ВИЧке текшериле элек жана өз статусу жөнүндө билишпейт.",
+  "c1_text": "СИЗДЕ ВИЧ АНЫКТАЛСА, ЭМНЕ КЫЛЫШ КЕРЕК?\n\n",
+  "c1_text2": "Бүгүнкү күндө ВИЧ илдети өнөкөт жугуштуу оору болуп саналат. Дарыгер дайындаган заманбап дарылоону акысыз аласыз. Дарылоо вирустун организмде көбөйүшүнө жол бербейт; ал ден соолугуңузду сактап, ВИЧ-инфекциясы жок адамдай эле узак жана бактылуу жашоону камсыз кылат.\n",
+  "c1_text3": "Сиз сабырдуу болуп, ВИЧ илдети тууралуу ушул тиркемеден көбүрөөк маалымат алышыңыз керек. Сиз “Позитивдүү жашоо” деген китепти окуп, же аудиосун уга аласыз. Ошондой эле дарыгерден да керектүү маалыматты алсаңыз болот.",
+  "c1_text4": "Бул тиркемеде сиз бейөкмөт уюмдардын же ВИЧ менен жашаган адамдарды (аларды ВИЧ менен жашаган адамдар деп аташат – кыскача ВЖА) колдоо топторунун даректерин таба аласыз. Алар сизге ВИЧ жөнүндө маалыматты бере алышат жана статусту кабыл алуу этабында жана дарылана баштаганда жардам көрсөтө алышат. Колдоо топтору жөнүндө дарыгериңизден да сурай аласыз.",
+  "c1_text5": "Сиз жыныстык өнөктөштөрүңүзгө өз статусуңуз тууралуу ачык айтып, алар ВИЧти жуктуруп албашы үчүн чараларды көрүшүңүз керек.",
+  "c1_text6": "Нужно определить людей, которым Вы доверяете, чтобы поделиться с ними информацией и получить поддержку.",
+  "c1_text7": "Сиз ВИЧ-илдетинин белгилерин сезе элек болушуңуз мүмкүн, бирок ВИЧ организмде жүрөт жана иммундук (коргонуу) системанын клеткаларын акырындык менен жок кылууда. Ошондуктан өзүңүздү ВИЧтен коргоо үчүн мүмкүн болушунча тезирээк дарылоону башташыңыз керек. ",
+  "c1_text8": "СПИД борборуна же башка медициналык уюмга (ҮМБ, ҮДТ) каттоого туруңуз; керектүү анализдерди тапшырып, ВИЧ-инфекциясынан дарылана баштаңыз. ",
+  "c1_text9": "Канчалык эрте дарылана баштасаңыз, ВИЧ ден соолугуңузга ошончолук азыраак зыян келтирет. ",
+  "c1_text10": "Дарыланууну эрте мөөнөттө жана туура баштаганда (дарынын дозасын так сактаганда, дарыланууну үзгүлтүккө учуратпаганда) ВИЧ-позитивдүү адамдардын иммундук системасы бузулбайт, ошондуктан СПИД баскычына да өтүп кетпейт. ",
+  "c1_text11": "Өзүңүздү жана жакындарыңызды коргоо үчүн кандай профилактикалык чараларды көрүш керектиги жөнүндө маалымат алыңыз.",
+  "c1_text12": "Зарыл болгон учурда, алдын алуу программаларына кошула аласыз. Бул программалар сизди жыныстык жол менен, же ийне аркылуу жуккан илдеттерден коргойт. Эгерде сиз баңгизатын колдонсоңуз, кокустан жыныстык катнашка барсаңыз, же өз жынысыңыздагы адамдар менен жыныстык байланыш түзсөңүз бул программалар өзгөчө маанилүү болот. ",
+  "c1_text13": "ВИЧ жана СПИД ДЕГЕН ЭМНЕ?\n\n",
+  "c1_text14": " – бул адамдын иммундук жетишсиздигинин вирусу:\n",
+  "c1_text15": "ирус – бул жугуштуу оорулардын эң майда козгогучу;",
+  "c1_text16": "ммундук жетишсиздик – вирус иммундук системаны талкалап, организмдин жугуштуу ооруларга каршы күрөшүндө “таңкыстык” (алсыздык, жетишсиздик) шартын түзүп жатат дегенди билдирет;",
+  "c1_text17": "Адамдын иммундук жетишсиздиги дегенде, бул вирус адамдарга гана жугат дегенди билдирет.",
+  "c1_text18": "ВИЧ “ретровирустардын” түркүмүнө кирет, ошондуктан ВИЧ инфекциясын дарылоо үчүн жазылган вируска каршы дарылар антиретровирустук дарылар деп, ал эми дарылоо антиретровирустук терапия (АРТ) деп аталат.",
+  "c1_text19": "адамдарда ВИЧ инфекциясы деп аталган ооруну пайда кылат. ",
+  "c1_text20": "көпкө созулушу мүмкүн, бирок вирус иммундук системаны тынымсыз талкалап туратошондуктан, оорунун белгилери да өзгөрө берет – бирде такыр эле белгиси болбосо, кээде оор иммундук жетишсиздикке чейин да жетиши ыктымал. Бул этаптар «ВИЧ инфекциясынын баскычтары» деп аталат.",
+  "c1_text21": "ВИЧ-инфекциясын жуктуруп алган адамдарды ",
+  "c1_text22": "ВЖА – ВИЧ менен жашаган адамдар, же ВИЧ-позитивдүү адамдар деп аташат.",
+  "c1_text23": "Антиретровирустук дарылар менен дарыланууну эрте мөөнөттө жана туура баштаганда ",
+  "c1_text24": "(дарынын дозасын так сактаганда, дарыланууну үзгүлтүккө учуратпаганда) ВИЧ-позитивдүү адамдардын иммундук системасы талкаланбайт, ошондуктан СПИД андан ары өнүкпөйт.",
+  "c1_text25": "\n\nУшундан улам, силер билгендей:",
+  "c1_text26": "бул вирус",
+  "c1_text27": " – бул оору, ал эми",
+  "c1_text28": " - ВИЧ-инфекциясынын бир бөлүгү гана (биз баскыч деп атайбыз).\n",
+  "c1_text29": "ИММУНИТЕТ ДЕГЕН ЭМНЕ?\n\n",
+  "c1_text30": "денени бардык чоочун нерселерден коргоо үчүн жооп берет - бөтөн агенттерден микробдордон, вирустардан), ошондой эле организмдин өзүнүн өзгөрүлгөн клеткаларынан коргойт. Бул организмдин бүтүндүгүн сактап калууга жардам берет."
 }
