--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -271,5 +271,39 @@
   "check_answers" : "Пожалуйста отметьте все возможные варианты",
   "check_answer" : "Пожалуйста отметьте один правильный ответ",
   "analyze_result": "Результаты анализа",
-  "doctor_appointment": "Назначение врача"
+  "doctor_appointment": "Назначение врача",
+  "drNadezhda_chapter_one": "Здравствуйте!\nя – доктор Надежда",
+  "drAzamat_chapter_one": "Здравствуйте!\nя – доктор Азамат",
+  "first_dialog_c1": "Сегодня мы поговорим с Вами о ВИЧ и СПИДе. Мы расскажем о том, что такое ВИЧ и СПИД, как ВИЧ передается, почему важно тестирование на ВИЧ и что нужно делать, когда тест на ВИЧ оказывается\n положительным.",
+  "last_dialog_c2": "Первые случаи ВИЧ-инфекции в Кыргызстане среди иностранцев были выявлены в 1987 году, а среди граждан Кыргызской Республики первый случай был выявлен в 1996 году. На 1 января 2017 года в Кыргызстане выявлено 7117 людей с ВИЧ. По оценкам, в стране проживает 8307 ЛЖВ, то есть многие люди с ВИЧеще не прошли тестирование на ВИЧ и не знают о своем статусе.",
+  "c1_text": "ЧТО ДЕЛАТЬ, ЕСЛИ У ВАС ВЫЯВИЛИ ВИЧ?\n\n",
+  "c1_text2": "Сегодня ВИЧ-инфекция, это хроническое инфекционное заболевание. Современное лечение, которое назначит врач, Вы получаете бесплатно. Лечение не дает вирусу размножаться в организме; оно сохранит Ваше здоровье и обеспечит долгую счастливую жизнь, как и у человека без ВИЧ.\n",
+  "c1_text3": "Следует успокоиться и получить больше информации о ВИЧ-инфекции, которую Вы найдете в этом приложении. Вы можете почитать или прослушать запись книги «Позитивная жизнь». Вы также получите нужную информацию у врача.",
+  "c1_text4": "В этом приложении Вы найдете адреса НПО или групп поддержки людей, которые живут с ВИЧ (их называют люди, живущие с ВИЧ – сокращенно ЛЖВ). Они могут дать Вам информацию о ВИЧ и оказать помощь на этапе принятия статуса и начала лечения. О группах поддержки Вы сможете также узнать у Вашего врача.",
+  "c1_text5": "Вам нужно будет сообщить о своем статусе своим половым партнерам и принять меры, чтобы не передать им ВИЧ.",
+  "c1_text6": "Маалыматтар менен бөлүшүп, колдоо табуу үчүн сиз ишеним арткан адамдарды аныктап алышыңыз керек.",
+  "c1_text7": "Вы можете еще не чувствовать проявлений ВИЧ-инфекции, но ВИЧ находится в организме и медленно уничтожает клетки иммунной (защитной) системы. Поэтому нужно как можно скорее начать лечение, чтобы защитить себя от ВИЧ. ",
+  "c1_text8": "Встаньте на учет в Центре СПИД или другой медицинской организации (ЦСМ, ГСВ); пройдите необходимое обследование и начните лечение ВИЧ-инфекции. ",
+  "c1_text9": "Чем раньше Вы начнете лечение, тем меньший вред ВИЧ окажет Вашему здоровью. ",
+  "c1_text10": "При раннем начале и правильно проводимом лечении (строгое соблюдение дозы препарата, непрерывности лечения) у ВИЧ-позитивных людей иммунная система не разрушается, поэтому СПИД не развивается.",
+  "c1_text11": "Получите информацию какие меры профилактики для собственной защиты и защиты близких нужно использовать.",
+  "c1_text12": "При необходимости Вы можете включиться в профилактические программы для того, чтобы защитить себя от инфекций, которые передаются половым или инъекционным путем. Это особенно важно, если Вы потребляете наркотики, имеете случайные половые контакты или вступаете в контакты с людьми одного с Вами пола. ",
+  "c1_text13": "ЧТО ТАКОЕ ВИЧ и СПИД?\n\n",
+  "c1_text14": " – это вирус иммунодефицита человека:\n",
+  "c1_text15": "ирус – это мельчайший возбудитель инфекционных заболеваний;",
+  "c1_text16": "ммунодефицит – означает, что вирус разрушает иммунную систему и создает условия «дефицита» (слабости, недостатка) в борьбе организма против инфекционных заболеваний;",
+  "c1_text17": "еловека – означает то, что данный вирус поражает только человека.",
+  "c1_text18": "ВИЧ относится к семейству «ретровирусов», поэтому противовирусные лекарства, назначаемые для лечения ВИЧ-инфекции, называются ",
+  "c1_text19": "вызывает у людей заболевание, которое называют ВИЧ-инфекция. ",
+  "c1_text20": "может протекать долго, но вирус постоянно разрушает иммунную систему и поэтому проявления болезни меняются – от отсутствия каких-либо проявлений до тяжелого иммунодефицита. Эти этапы называют ",
+  "c1_text21": "Людей, которые инфицированы ВИЧ, называют ",
+  "c1_text22": "ЛЖВ – люди, которые живут с ВИЧ, или ВИЧ-позитивные люди.",
+  "c1_text23": "При раннем начале и правильно проводимом лечении ",
+  "c1_text24": "(строгое соблюдение дозы препарата, непрерывности лечения) антиретровирусными препаратами у ВИЧ-позитивных людей иммунная система не разрушается, поэтому СПИД не развивается.",
+  "c1_text25": "\n\nТаким образом, Вы знаете, что:",
+  "c1_text26": "это вирус",
+  "c1_text27": "- это заболевание, а",
+  "c1_text28": " – это только часть ВИЧ-инфекции (мы говорим – стадия).\n",
+  "c1_text29": "ЧТО ТАКОЕ ИММУНИТЕТ?\n\n",
+  "c1_text30": "отвечает за защиту организма от всего чужого – как от чужеродных агентов микробов, вирусов), так и от собственных измененных клеток организма. Это позволяет сохранить целостность организма."
 }
