--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -305,7 +305,6 @@
   "c1_text27": "- это заболевание, а",
   "c1_text28": " – это только часть ВИЧ-инфекции (мы говорим – стадия).\n",
   "c1_text29": "ЧТО ТАКОЕ ИММУНИТЕТ?\n\n",
-  "c1_text30": "отвечает за защиту организма от всего чужого – как от чужеродных агентов микробов, вирусов), так и от собственных измененных клеток организма. Это позволяет сохранить целостность организма.",
-  "test": "Иммунитет обеспечивают органы и клетки, которые образуют "
+  "c1_text30": "отвечает за защиту организма от всего чужого – как от чужеродных агентов микробов, вирусов), так и от собственных измененных клеток организма. Это позволяет сохранить целостность организма."
 }
 
