translating to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -306,5 +306,20 @@
   "c1_text27": " – бул оору, ал эми",
   "c1_text28": " - ВИЧ-инфекциясынын бир бөлүгү гана (биз баскыч деп атайбыз).\n",
   "c1_text29": "ИММУНИТЕТ ДЕГЕН ЭМНЕ?\n\n",
-  "c1_text30": "денени бардык чоочун нерселерден коргоо үчүн жооп берет - бөтөн агенттерден микробдордон, вирустардан), ошондой эле организмдин өзүнүн өзгөрүлгөн клеткаларынан коргойт. Бул организмдин бүтүндүгүн сактап калууга жардам берет."
+  "c1_text30": "денени бардык чоочун нерселерден коргоо үчүн жооп берет - бөтөн агенттерден микробдордон, вирустардан), ошондой эле организмдин өзүнүн өзгөрүлгөн клеткаларынан коргойт. Бул организмдин бүтүндүгүн сактап калууга жардам берет.",
+  "c1_text31": " Иммунитетти организмдин ",
+  "c1_text32": " иммундук системасын  ",
+  "c1_text33": " түзгөн органдар жана клеткалар камсыз кылат. Аны ",
+  "c1_text34": " коргонуу системасы ",
+  "c1_text35": "деп да атап коюшат.Иммундук системанын негизги органы болуп,",
+  "c1_text36": "тимус ",
+  "c1_text37": "же ",
+  "c1_text38": "богок бези ",
+  "c1_text39": "саналат.Иммундук коргонуунун негизги клеткалары канда жана жилик чучугунда, башка органдарда,мисалы, боордо болот.\n\n",
+  "c1_text40": "Иммундук клеткалардын бир нече түрү бар, алардын кээ бирлери ",
+  "c1_text41": "Т-лимфоциттердин ",
+  "c1_text42": "жардамчылары (хелперлер) болуп саналат, алар бүтүндөй иммундук системанын жөнгө салынган ишин уюштурат. Аларды ",
+  "c1_text43": "CD4 ",
+  "c1_text44": "клеткалары деп аташат. \n\n"
+
 }
