--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -306,6 +306,20 @@
   "c1_text28": " – это только часть ВИЧ-инфекции (мы говорим – стадия).\n",
   "c1_text29": "ЧТО ТАКОЕ ИММУНИТЕТ?\n\n",
   "c1_text30": "отвечает за защиту организма от всего чужого – как от чужеродных агентов микробов, вирусов), так и от собственных измененных клеток организма. Это позволяет сохранить целостность организма.",
-  "testik": "Симон Салам алейкум"
+  "c1_text31": "Иммунитет обеспечивают органы и клетки, которые образуют ",
+  "c1_text32": "иммунную систему ",
+  "c1_text33": "организма. Ее еще называют ",
+  "c1_text34": "защитной системой. ",
+  "c1_text35": "Основным органом иммунной системы является ",
+  "c1_text36": "тимус ",
+  "c1_text37": "или ",
+  "c1_text38": "вилочковая железа.",
+  "c1_text39": "Основные клетки иммунной защиты находятся в крови и костном мозге, в других органах, например, в печени.\n\n",
+  "c1_text40": "Различают несколько видов иммунных клеток, одними из них являются ",
+  "c1_text41": "Т-лимфоциты ",
+  "c1_text42": "помощники (хелперы), которые организуют слаженную работу всей иммунной системы. Их называют ",
+  "c1_text43": "СД4 ",
+  "c1_text44": "клетками.\n\n"
+
 }
 
